--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,2 @@
-
+header{background-color:#281400;text-align:center}header h1,header h2{color:white}header nav a{color:white}header nav ul{justify-content:center;width:100%}header .btn{background-color:#a28f61;color:white}footer{background-color:#0f3e57}
 /*# sourceMappingURL=style.css.map */
