--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,3 +1,9 @@
+$pp : #ffd500;
+$kk : #a28f61;
+$gy : #8d9198;
+
+body {
+  background-color: #eeeeee;
 header {
     background-color: #281400;
     text-align: center;
@@ -23,6 +29,35 @@ header {
 
 }
 
+main {
+  h2 {
+    text-align: center;
+  }
+  article {
+    background-color: white;
+    div.article-div {
+      padding: 1em;
+      h3 {
+        font-size: 1em;
+        font-weight: bold;
+      }
+      h3.kk {
+        color: $kk;
+      }
+      h3.pp {
+        color: $pp;
+      }
+      h3.grey {
+        color: $gy;
+      }
+      h4 {
+        font-size: 1em;
+      }
+    }
+  }
+}
+
 footer {
     background-color: #0f3e57;
+}
 }
