--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -10,14 +10,23 @@ body {
         background-color: #281400;
         text-align: center;
 
+        i{
+            color: lightgrey;
+            font-size: 1em;
+
+        }
         a.arrow {
           position: absolute;
           bottom: 20px;
-          right: 20px;
+          right: 1.5em;
+          font-size: 2em;
         }
         nav {
           a {
+            font-family: 'Quicksand', sans-serif;
             color: white;
+            font-size: 1.5em;
+            font-weight: lighter;
           }
 
           ul {
@@ -43,6 +52,7 @@ body {
             background-color: #a28f61;
             color: white;
             margin-bottom: 0.5em;
+            font-weight: bold;
           }
         }
 
@@ -50,25 +60,37 @@ body {
     }
 
     main {
+        padding: 5em 0;
+        img{
+            border-radius: 3px 3px 0 0;
+        }
         h2 {
             font-family: 'Merriweather', serif;
             font-weight: lighter;
             text-align: center;
+            padding: 0 0 1.5em 0;
         }
 
+        div.col-6{
+            padding: 0.40em;
+        }
         article {
             background-color: white;
+            box-shadow: 1px 10px 15px lightgrey;
+            border-radius: 3px;
 
             div.article-div {
-                padding: 1em;
+                padding: 0.8em 0.5em 0.2em 0.5em;
 
                 h3 {
                     font-size: 1em;
                     font-weight: bold;
+                    line-height: 1.2em;
                 }
 
                 h3.kk {
                     color: $kk;
+
                 }
 
                 h3.pp {
@@ -81,12 +103,21 @@ body {
 
                 h4 {
                     font-size: 1em;
+                    color: grey;
+                    line-height: 0.7em;
+                }
+
+                h5{
+                    font-size: 1em;
+                    font-weight: bold;
+                    line-height: 0.7em;
                 }
             }
         }
     }
 
     footer {
+        padding: 4em 0 0 1.5em;
         background-color: #0f3e57;
         h3 {
           font-family: 'Merriweather', serif;
@@ -105,6 +136,10 @@ body {
             }
             a{
               color: grey;
+            }
+            a:hover{
+                color: white;
+                text-decoration: none;
             }
           }
 
