--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -17,8 +17,8 @@ body {
         }
         a.arrow {
           position: absolute;
-          bottom: 20px;
-          right: 1.5em;
+          bottom: 0;
+          right: 0.5em;
           font-size: 2em;
         }
         nav {
@@ -44,7 +44,6 @@ body {
           }
           h2 {
             font-size: 2.5em;
-            width: 10em;
             margin-left: auto;
             margin-right: auto;
           }
@@ -184,6 +183,10 @@ body {
           width: 10em;
           margin-left: auto;
           margin-right: auto;
+        }
+        a.arrow{
+            bottom: 20px;
+            right: 1.5em;
         }
       }
     }
