--- a/css/scss/_index.scss
+++ b/css/scss/_index.scss
@@ -16,6 +16,11 @@ body.product{
     div.col-12.col-md-6.product-image {
       display: flex;
       justify-content: center;
+      img{
+          width: 50%;
+          padding-left: 25%;
+          margin: auto;
+      }
     }
   }
 }
